<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textAddress"
        android:text="@string/address"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textAddress1"
        android:text="@string/ivy"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textAddress2"
        android:text="@string/greenbelt"
        android:textSize="15sp"
        android:textColor="@color/gray"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_map"
        android:text="@string/map"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPhone"
        android:layout_marginTop="20dp"
        android:text="@string/phone"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:text="@string/number"
        android:textSize="20sp"
        android:textColor="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textWebsite"
        android:layout_marginTop="20dp"
        android:text="@string/textwebsite"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/domain"
        android:text="https://www.google.com"
        android:textSize="20sp"
        android:textColor="@color/blue"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_share"
        android:text="@string/share"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>