<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textAnimals"
        android:text="@string/animals"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioMenu">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg"
                android:id="@+id/radioVeg"
                android:textSize="15sp"
                android:checked="true"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat"
                android:id="@+id/radioMeat"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan"
                android:id="@+id/radioVegan"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kosher"
                android:id="@+id/radioKosher"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/halal"
                android:id="@+id/radioHalal"
                android:textSize="15sp"/>
    </RadioGroup>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_toggle"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/specials"
        android:text="@string/specials"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_specials"
            android:hint="@string/allergies"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textSpecials"
            android:text="@string/et_specials"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add"
            android:text="@string/add"
            android:layout_below="@+id/et_specials"
            android:gravity="center"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset"
            android:text="@string/reset"
            android:layout_below="@+id/et_specials"
            android:gravity="center"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:visibility="invisible"/>
    </RelativeLayout>


</LinearLayout>