<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.chaitanya.foodapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        android:text="@string/nameRes"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_menu"
        android:text="@string/menu"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/DarkBlue"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_contact"
        android:text="@string/contact"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/Yellow"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_website"
        android:text="@string/website"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/Red"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="60dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_preferences"
            android:text="@string/pref"
            android:layout_marginTop="80dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_gallery"
            android:text="@string/gallery"
            android:layout_marginTop="80dp"/>

    </LinearLayout>


</LinearLayout>
