<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/coffee"
            android:src="@drawable/coffee"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:id="@+id/textCoffee"
            android:layout_toRightOf="@+id/coffee"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceCoffee"
            android:text="@string/priceCoffee"
            android:layout_below="@+id/textCoffee"
            android:layout_toRightOf="@+id/coffee"
            android:layout_marginLeft="40dp"
            android:textSize="15sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dash1"
        android:text="___________________________________________________"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/steak"
            android:src="@drawable/steak"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steak"
            android:id="@+id/textSteak"
            android:layout_toRightOf="@+id/steak"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceSteak"
            android:text="@string/priceSteak"
            android:layout_below="@+id/textSteak"
            android:layout_toRightOf="@+id/steak"
            android:layout_marginLeft="40dp"
            android:textSize="15sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dash2"
        android:text="___________________________________________________"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iceCream"
            android:src="@drawable/ice"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icecream"
            android:id="@+id/textIce"
            android:layout_toRightOf="@+id/iceCream"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceIce"
            android:text="@string/priceIce"
            android:layout_below="@+id/textIce"
            android:layout_toRightOf="@+id/iceCream"
            android:layout_marginLeft="40dp"
            android:textSize="15sp"/>
    </RelativeLayout>

</LinearLayout>